程序代码完成, 差tabbar图标, App桌面图标 App启动图

--- a/CCQNews/Podfile
+++ b/CCQNews/Podfile
@@ -11,4 +11,5 @@ target 'CCQNews' do
   pod 'ZFPlayer'
   pod 'ZFPlayer/ControlView'
   pod 'ZFPlayer/AVPlayer'
+  pod 'FDFullscreenPopGesture'
 end
