增加推送功能

--- a/CCQNews/CCQNews/Info.plist
+++ b/CCQNews/CCQNews/Info.plist
@@ -44,5 +44,15 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+        <string>mqq</string>
+        <string>mqqapi</string>
+        <string>mqqwpa</string>
+        <string>weixin</string>
+        <string>wechat</string>
+        <string>alipay</string>
+        <string>alipays</string>
+    </array>
 </dict>
 </plist>
